projeto finalizado mas não foi feita a responsividade, não quis perder tempo já que não foi pedido.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-Br">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Trilha de CSS - DIO</title>
+  <link rel="stylesheet" href="/assets/css/global.css">
+  <title>Trilha 01 de CSS - DIO</title>
 </head>
 <body>
   <header class="banner">
@@ -12,9 +13,9 @@
       <div class="logo">
         <img src="assets/images/logo.png" title="Logotipo Trilha de CSS DIO" alt="Logotipo Trilha de CSS DIO">
       </div>
-      <h1>Trilha de CSS da DIO</h1>
+      <h1 class="gradient-text">Trilha de CSS da DIO</h1>
       <p>A nova Trilha de CSS da DIO está disponível. Acesse já e aprenda do zero como desenvolver sites profissionais.</p>
-      <button>Quero me inscrever</button>
+      <button class="gradient-text">Quero me inscrever</button>
     </div>
   </header>
   <main>
@@ -37,7 +38,7 @@
       </div>
     </section>
     <section id="transform-world">
-      <p>TRANSFORME O MUNDO COM A GENTE</p>
+    <p>TRANSFORME O MUNDO COM A GENTE</p>
     </section>
     <section id="professional-challenges">
       <h2>Evolua e encare novos desafios profissionais</h2>
@@ -47,7 +48,7 @@
         acessam a nossa plataforma em busca dos talentos mais criativos, dinâmicos e colaborativos, 
         além do conhecimento técnico. 
         A nossa missão é te preparar para que você conecte-se com as melhores oportunidades.
-      </p>
+      </p> 
     </section>
   </main>
   <footer>
